# cs-455-raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Raytracer.cpp  Raytracer.h  Scene.cpp  Scene.h  Vect3.h  main  main.cpp  pixel.h
include/: Material.h  Matrix4.h  Ray.h  Raytracer.h  Scene.h  Triangle.h  Vect3.h  loadbar.h  pixel.h
src/: Material.cpp  Raytracer.cpp  Scene.cpp  Triangle.cpp  loadbar.cpp  main  main.cpp
